res/examples/invalid/call_non_callable_undefined_identifier_b.eg
fn sum (a: number, b: number): number => {
    a + b
}

sums(1, 2);

// out: TypeError: `sums` is not defined